--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "webpack-dev-server": "^2.9.7"
   },
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0",
-    "react-dom": "^15.3.0 || ^16.0.0"
+    "react": "^15.3.0 || ^16.0.0 || ^17.0.0",
+    "react-dom": "^15.3.0 || ^16.0.0 || ^17.0.0"
   },
   "scripts": {
     "build": "nps build && bundlesize",
